# pointproofs

./: .gitignore  .travis.yml  3.param  Cargo.toml  LICENSE  Makefile  README.md  SPEC.md  bench-results  benchmark.md  benchmark_new.md  benchmarks.txt  build.rs  cbindgen.toml  data_paper.md  go.mod  mt.md  result.txt  sum_of_product.md  todos.md  wrappers.go  wrappers_test.go
benches/: README.md  basic.rs  bench_aggregation.rs  bench_batch_norm.rs  bench_mul.rs  bench_with_pre_comp.rs  bench_without_pre_comp.rs  benchmark_extra.md  merkle.rs  multi_thread.rs  old_data.md  one_m.rs  pairings.rs  paper.rs  slow.rs  sum_of_prod.rs
benches/pre-gen-com-and-proof/: Cargo.toml
benches/pre-gen-com-and-proof/src/: main.rs
benches/pre-gen-param/: 1024.param  16384.param  256.param  4096.param  Cargo.toml  README.md
benches/pre-gen-param/src/: main.rs
c_test/: pointproofs_c.h  test.c  test_dynamic.c  veccom_c.h
data/: aggregate.txt  data.txt  processed.txt  verify.txt
data/process_data/: Cargo.toml
data/process_data/src/: main.rs
src/: Cargo.toml  Makefile  README.md  SPEC.md  build.rs  cbindgen.toml  crs.param  lib.rs  main.rs  run_pairings.rs  run_veccom_merkle.rs  run_veccom_pairings.rs
src/benches/: README.md  bench_aggregation.rs  extra.rs
src/c_test/: pointproofs_c.h  test.c
src/merkle/: commit.rs  mod.rs  paramgen.rs  prove.rs  verify.rs
src/multi_thread/: mod.rs
src/pairings/: c_api.rs  c_api_dynamic.rs  ciphersuite.rs  commit.rs  err.rs  hash_to_field_pointproofs.rs  hash_to_field_veccom.rs  hash_to_ti.rs  misc.rs  mod.rs  multi_threads.rs  param.rs  paramgen.rs  pointproofs_groups.rs  prove.rs  proverparam.rs  serdes.rs  tests.rs  verifierparam.rs  verify.rs
src/test/: aggregate.rs  c_api.rs  commit.rs  hashes.rs  mod.rs  multi_threads.rs  param.rs  proof.rs  prove.rs  serdes.rs
src/veccom/: commit.rs  mod.rs  paramgen.rs  verify.rs
src/veccom-pairings/: prove.rs
src/veccom_merkle/: commit.rs  mod.rs  paramgen.rs  prove.rs  verify.rs
src/veccom_pairings/: c_api.rs  commit.rs  mod.rs  paramgen.rs  prove.rs
test_c/: veccom_c.h
