[package]
  name = "veccom"
  description = "Vector commitments with curve BLS12-381"
  license = "MIT/Apache-2.0"
  authors = [
    "Leo Reyzin <leo@algorand.com>",
    "Zhenfei Zhang <zhenfei@algorand.com>"
  ]
  build = "build.rs"

  # Remember to change version string in README.md.
  version = "0.1.0"

[lib]
  crate-type = ["rlib", "staticlib"]

[dependencies]
  ff = { git = "https://github.com/algorand/ff"}
  pairing-plus = { git = "https://github.com/algorand/pairing-plus"}
  #pairing-plus = { path = "../pairing-plus"}
  sha2 = "0.8"
  libc = { version = "0.2", features = ["align"] }
  # ff = { version = "0.4", features = ["derive"] }
  bigint = { version = "4", default-features = false }
  # veccom-paramgen = { git = "ssh://git@github.com/algorand/veccom-paramgen", branch = "potential_bug"}
  # veccom-paramgen = { path = "../veccom-paramgen"}

[features]


[build-dependencies]
  cbindgen = "0.9.0"

[dev-dependencies]
  bencher = "0.1.5"
  criterion = "0.2.11"

# [[bench]]
#   name = "pairings"
#   harness = false

[[bench]]
  name = "bench_batch_norm"
  harness = false
#
# [[bench]]
#   name = "bench_without_pre_comp"
#   harness = false
