[package]
  name = "pointproofs"
  description = "Pointproofs: Aggregating Proofs for Multiple Vector Commitments"
  license = "MIT"
  authors = [
    "Leo Reyzin <leo@algorand.com>",
    "Zhenfei Zhang <zhenfei@algorand.com>"
  ]
  build = "build.rs"

  # Remember to change version string in README.md.
  version = "0.1.0"

[lib]
  crate-type = ["rlib", "staticlib"]

[dependencies]
#  ff = { version = "0.6.3", git = "https://github.com/algorand/ff-zeroize", features = ["derive"]}
  ff-zeroize = { version = "0.6.3", features = ["derive"]}
  pairing-plus = { git = "https://github.com/algorand/pairing-plus"}
  sha2 = "0.8"
  libc = { version = "0.2", features = ["align"] }
  bigint = { version = "4", default-features = false }
  pointproofs-paramgen = { git = "https://github.com/algorand/pointproofs-paramgen"}

[features]
  # group switched: PointproofsG1 is in fact G2 in BLS-group
  # in this setting almost everything is slower, except that
  # the (batch) verification will be faster
  group_switched = []

[build-dependencies]
  cbindgen = "0.9.0"

[dev-dependencies]
  bencher = "0.1.5"
  criterion = "0.2.11"
  rand = "0.5"
  rand_core = ""
  rand_xorshift = ""


## A set of benchmarks are available under the benches folder
## Some are quite slow
## Uncomment the following to use the corresponding tool
[[bench]]
# this file provides basic benchmarks - the data are presenetd in benchmark.md
  name = "basic"
#
# # this file benches the cost for cross commitments aggregation and batch verification
#   name = "bench_aggregation"
#
# # this file benches the cost of sum of product vs doing it serialized
#   name = "bench_mul"
#
# # this file provides extra benchmarks using parameters with pre-compution
#   name = "extra"
#
  harness = false
