[package]
name = "pre-gen-param"
version = "0.1.0"
authors = ["zhenfei <zhenfei.zhang@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  veccom-paramgen = { git = "ssh://git@github.com/algorand/veccom-paramgen", branch = "potential_bug"}
  pairing-plus = { git = "https://github.com/algorand/pairing-plus"}
  ff = { version = "0.4", features = ["derive"] }
